# medifax

./: .gitignore  Cargo.toml  README  README.md  package-lock.json  package.json  run_tailwind.cmd  run_tailwind.sh  tailwind.config.js  tauri.conf.json  tauri.windows.conf.json
.github/workflows/: binstall.yaml
icons/: icon.icns
src/: main.rs
src/modals/: generics.rs
src/utils/: generics.rs  interop.rs  mod.rs
ui/: generics.html  generics_details.html  home.html  index.html
ui/css/: genericsDetails.css  loading.css  main.css  tailwind.css
ui/js/: chartingGenericDetails.js  genericDelegate.js  loadingLoopback.js
