[package]
name = "medifax"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6.1", features = [] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
rand = "0.8.5"
lazycell = "1.3.0"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
rpath = false
lto = "fat"
strip = "symbols"
panic = "abort"
